# napari-shape-odyssey

./: .buildinfo  .gitignore  LICENSE  README.md  genindex.html  intro.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
_sources/notebooks/spectral_analysis/: signatures2.ipynb  spectral_clustering.ipynb
_sources/notebooks/unwrapping/: demo_mercator.ipynb  demo_unwrap_to_disk.ipynb
api/: api.html  signatures.html  spectral.html  unwrapping.html
docs/: _config.yml  _toc.yml  intro.md  requirements.txt
docs/api/: api.rst  signatures.rst  spectral.rst  unwrapping.rst
docs/notebooks/spectral_analysis/: shape_correspondence.ipynb  shape_resonance.ipynb  signatures.ipynb  spectral_analysis.ipynb  spectral_clustering.ipynb  spectral_intensity_decomposition.ipynb
docs/notebooks/unwrapping/: demo_mercator.ipynb  demo_unwrap_to_disk.ipynb  demo_unwrap_to_sphere.ipynb
notebooks/spectral_analysis/: shape_correspondence.html  shape_resonance.html  signatures.html  signatures2.html  spectral_analysis.html  spectral_clustering.html  spectral_intensity_decomposition.html
notebooks/unwrapping/: demo_mercator.html  demo_unwrap_to_disk.html  demo_unwrap_to_sphere.html
source/_templates/: custom-class-template.html  custom-module-template.html
src/napari_shape_odyssey/: __init__.py  _reader.py  _sample_data.py  _spectral.py  _utils.py  _visualize.py  napari.yaml
src/napari_shape_odyssey/_signatures/: __init__.py  landmark_correspondence_widget.ui  landmarks.py  signatures.py
src/napari_shape_odyssey/_spectral/: __init__.py  expansion.py  spectral.py
src/napari_shape_odyssey/_tests/: test_reader.py  test_sample_data.py  test_shape_correspondence.py  test_spectral.py  test_writer.py
src/napari_shape_odyssey/_unwrapping/: __init__.py  projections.py  unwrap.py
