[metadata]
name = napari-shape-odyssey
version = attr: napari_shape_odyssey.__version__
description = Analyze shapes of meshes
long_description = file: README.md
long_description_content_type = text/markdown

author = Johannes Soltwedel
author_email = johannes_richard.soltwedel@tu-dresden.de
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing

project_urls =
    Bug Tracker = https://github.com/jo-mueller/napari-shape-odyssey/issues
    Documentation = https://jo-mueller.github.io/napari-shape-odyssey/intro.html
    Source Code = https://github.com/jo-mueller/napari-shape-odyssey
    User Support = https://github.com/jo-mueller/napari-shape-odyssey/issues


[options]
packages = find:
install_requires =
    numpy
    vedo
    pandas
    napari
    napari-stress
    napari-process-points-and-surfaces
    pyfmaps

python_requires = >=3.8
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-shape-odyssey = napari_shape_odyssey:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt
    PyQt5


[options.package_data]
* = *.yaml
